fix image align

--- a/src/blocks/image-maxi/style.scss
+++ b/src/blocks/image-maxi/style.scss
@@ -1,7 +1,6 @@
 body.maxi-blocks--active figure.maxi-image-block {
 	display: flex;
 	justify-content: center;
-	flex-direction: column;
 
 	img {
 		box-sizing: border-box;
